--- a/views/center/employee/chak1/employeeChak1Form.ejs
+++ b/views/center/employee/chak1/employeeChak1Form.ejs
@@ -61,21 +61,21 @@
                                     <div class="form-group">
                                         <label for="birthDate" class="col-md-3 control-label">জন্ম তারিখ</label>
                                         <div class="col-md-9">
-                                            <input type="text" class="form-control" name="birthDate" placeholder="জন্ম তারিখ">
+                                            <input type="date" class="form-control" name="birthDate" placeholder="জন্ম তারিখ">
                                         </div>
                                     </div>
 
                                     <div class="form-group">
                                         <label for="firstdate" class="col-md-3 control-label">চাকুরীতে প্রথম যোগদানের তারিখ</label>
                                         <div class="col-md-9">
-                                            <input type="text" class="form-control" name="firstdate" placeholder="চাকুরীতে প্রথম যোগদানের তারিখ">
+                                            <input type="date" class="form-control" name="firstdate" placeholder="চাকুরীতে প্রথম যোগদানের তারিখ">
                                         </div>
                                     </div>
 
                                     <div class="form-group">
                                         <label for="presentDate" class="col-md-3 control-label">বর্তমান কর্মস্থলে যোগদানের তারিখ</label>
                                         <div class="col-md-9">
-                                        <input type="text" class="form-control" name="presentDate" placeholder="বর্তমান কর্মস্থলে যোগদানের তারিখ">
+                                        <input type="date" class="form-control" name="presentDate" placeholder="বর্তমান কর্মস্থলে যোগদানের তারিখ">
                                         </div>
                                     </div>
 
