--- a/views/includes/sidebar.ejs
+++ b/views/includes/sidebar.ejs
@@ -26,6 +26,9 @@
                     <div class="nav-item">
                         <a href="/pd/newKhorochTable"><i class="ik ik-command"></i><span>খরচের (বিএস্টেটমেন্ট) কোডসমূহ</span></a>
                     </div>
+                    <!-- <div class="nav-item">
+                        <a href="/pd/newcropCategoryList"><i class="ik ik-command"></i><span>মাসিক প্রতিবেদনের ক্যাটাগরিসমূহ</span></a>
+                    </div> -->
                    
                     <div class="nav-lavel">প্রতিবেদন</div>
                     <div class="nav-item">
