--- a/views/pd/cropCategoryList/cropCategoryList.ejs
+++ b/views/pd/cropCategoryList/cropCategoryList.ejs
@@ -9,50 +9,51 @@
                         <div class="col-md-10">
                             <h1 class="text-center"><%= title %></h1>
                         </div>
-                        
                     </div>
-                  
-
                      <div class="table-responsive" id="output">
-                        <%if (records.length >0){ %>
+                        <%if (mainCategorys.length >0){ %>
                             <table class="table table-bordered table-striped" id="tblCustomers" cellspacing="0" cellpadding="0">
                             <thead>
                             <tr>
-                                <th>সেন্টারের নাম</th>
-                                <th>কর্মকর্তার নাম</th>
-                                <th>পদবী</th>
-                                <th>মোবাইল নং</th>
-                                <th>ই-মেইল</th>
-                                <th>পরিবর্তন/মুছুন</th>
-
+                                <th>ক্যাটাগরির নাম</th>
+                               <th>সাব-ক্যাটাগরি নাম</th>
+                               <th>বিবরণ নাম</th>
+                                <th>জাত এর নাম</th>
+                               <th>পরিবর্তন</th>
                             </tr>
                             </thead>
                             <tbody>
-                                <% records.forEach(function(row){ %>
+                                <% mainCategorys.forEach(function(mainRow){ %>
                                     <tr>
-                                        <td><%= row.center %></td>
-                                        <td><%= row.kormokorta %></td>
-                                        <td><%= row.podobi %></td>
-                                        <td><%= row.mobile %></td>
-                                        <td><%= row.email %></td>
-                                        
-                                        <td><a class="btn btn-primary btn-xs" href="/pd/centerEdit/<%= row.id %>"><i class="fa fa-edit"></i></a>
-                                            <a class="btn btn-danger btn-xs" href="/pd/centerDelete/<%= row.id %>"><i class="fa fa-trash"></i></a>
+                                        <td>
+                                            <%= mainRow.name %>
+                                        </td>
+                                        <td> 
+                                        <% subCategorys.forEach(function(subRow){ %>
+                                           
+                                        <%if (mainRow.id === subRow.parent_id){ %>
+                                            <%= subRow.name %>  
+                                            <td>
+                                                
+                                            </td>                                   
+                                        <% } %>
+                                        <% }) %>
                                         </td> 
-                                       
+                                        <td></td>
+                                        <td></td>
+                                        <td><a class="btn btn-primary btn-xs" href="/pd/newKhorochTableEdit/<%= mainRow.id %>"><i class="fa fa-edit"></i></a>
+                                        </td>                                                                           
                                     </tr>
-                                <% }) %>
+                                    <% }) %>
                             </tbody>
                         </table>
                         <% }else{ %>
                             <table class="table table-bordered table-striped" id="tblCustomers" cellspacing="0" cellpadding="0">
                                 <thead>
                                 <tr>
-                                    <th>সেন্টারের নাম</th>
-                                    <th>কর্মকর্তার নাম</th>
-                                    <th>পদবী</th>
-                                    <th>মোবাইল নং</th>
-                                    <th>ই-মেইল</th>
+                                    <th>ক্রমিক নং</th>
+                                <th>ক্যাটাগরির নাম</th>
+                                
                                 </tr>
                                 </thead>
                                 <tbody>
@@ -65,16 +66,12 @@
                             </table>
                         <% } %>
 
-                    </div>
-
-
-                   <div id="output"></div>
-                 
+                    </div>                 
                 </div>
+
+                
             </div>
         </div>
     </div>
 
     <%- include('../../includes/footer')-%>
-
- 
