--- a/views/pd/charaKolomPrice/charaKolom/charaKolomEdit.ejs
+++ b/views/pd/charaKolomPrice/charaKolom/charaKolomEdit.ejs
@@ -9,7 +9,7 @@
                     <div id="signupbox" style="margin-top:50px" class="mainbox col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
                         <div class="panel panel-info">
                             <div class="panel-heading">
-                                <div class="panel-title"><h2>বিভিন্ন ফুল ও সুদৃশ্য গাছের চারা/কলমের বিক্রয় মূল্য ফর্ম</h2></div>
+                                <div class="panel-title"><h2>হরটিকালচার সেন্টারের চারা/কলমের বিক্রয়মূল্য ফর্ম</h2></div>
                                 <p><%
                                 if(success !=''){ %>
                                 <%= success %>
@@ -17,7 +17,7 @@
                                 </p>
                                 </div>  
                             <div class="panel-body" >
-                                <form action="/pd/otherFlowerForms" id="FieldTrialForm" class="form-horizontal" method="post"  role="form">
+                                <form action="/pd/charaKolomEditPost/<%=records.id%>" id="FieldTrialForm" class="form-horizontal" method="post"  role="form">
                                     <div id="signupalert" style="display:none" class="alert alert-danger">
                                         <p>Error:</p>
                                         <span></span>
@@ -25,41 +25,26 @@
 
                                         
                                     <div class="form-group">
-                                        <label for="item" class="col-md-3 control-label">আইটেমের নাম (জাতওয়ারী)</label>
+                                        <label for="cname" class="col-md-3 control-label">চারা/কলমের নাম</label>
                                         <div class="col-md-9">
-                                            <input type="text" class="form-control" name="item" placeholder="আইটেমের নাম (জাতওয়ারী)">
+                                            <input type="text" class="form-control" name="cname" placeholder="চারা/কলমের নাম" value="<%= records.cname %>">
                                         </div>
                                     </div>
                                     
                                     <div class="form-group">
-                                        <label for="polycholti" class="col-md-3 control-label">পলিব্যাগ (চলতি অর্থবছরে বিক্রয়মূল্য)</label>
+                                        <label for="cholti" class="col-md-3 control-label">চলতি অর্থবছরে অনুমোদিত বিক্রয়মূল্য</label>
                                         <div class="col-md-9">
-                                            <input type="text" class="form-control" name="polycholti" placeholder="পলিব্যাগ (চলতি অর্থবছরে বিক্রয়মূল্য)">
+                                            <input type="text" class="form-control" name="cholti" placeholder="চলতি অর্থবছরে অনুমোদিত বিক্রয়মূল্য" value="<%= records.cholti %>">
                                         </div>
                                     </div>
 
                                     <div class="form-group">
-                                        <label for="tobcholti" class="col-md-3 control-label">টবে (চলতি অর্থবছরে বিক্রয়মূল্য)</label>
+                                        <label for="parbotto" class="col-md-3 control-label">চলতি অর্থবছরে পার্বত্য জেলাসমূহের অনুমোদিত অনুমোদিত বিক্রয়মূল্য</label>
                                         <div class="col-md-9">
-                                            <input type="text" class="form-control" name="tobcholti" placeholder="টবে (চলতি অর্থবছরে বিক্রয়মূল্য)">
+                                            <input type="text" class="form-control" name="parbotto" placeholder="চলতি অর্থবছরে পার্বত্য জেলাসমূহের অনুমোদিত অনুমোদিত বিক্রয়মূল্য" value="<%= records.parbotto %>">
                                         </div>
                                     </div>
 
-                                    
-                                   
-                                    <div class="form-group">
-                                        <div class="col-md-9">
-                                            <label for="year">বছর :</label>
-                                        <select id="year" name="year" required>
-                                            <option value="2017">২০১৭-১৮</option>
-                                            <option value="2018">২০১৮-১৯</option>
-                                            <option value="2019">২০১৯-২০</option>
-                                            <option value="2020">২০২০-২১</option>
-                                            <option value="2021">২০২১-২২</option>
-                                            <option value="2022">২০২২-২৩</option>
-                                        </select>
-                                        </div>
-                                    </div>
 
                                     
                                     <div class="form-group">
