--- a/views/pd/charaKolomPrice/charaKolom/charaKolomForm.ejs
+++ b/views/pd/charaKolomPrice/charaKolom/charaKolomForm.ejs
@@ -32,47 +32,34 @@
                                     </div>
                                     
                                     <div class="form-group">
-                                        <label for="shotero" class="col-md-3 control-label">২০১৭-১৮ অর্থবছরে অনুমোদিত বিক্রয়মূল্য</label>
+                                        <label for="cholti" class="col-md-3 control-label">চলতি অর্থবছরে অনুমোদিত বিক্রয়মূল্য</label>
                                         <div class="col-md-9">
-                                            <input type="text" class="form-control" name="shotero" placeholder="২০১৭-১৮ অর্থবছরে অনুমোদিত বিক্রয়মূল্য">
+                                            <input type="text" class="form-control" name="cholti" placeholder="চলতি অর্থবছরে অনুমোদিত বিক্রয়মূল্য">
                                         </div>
                                     </div>
 
                                     <div class="form-group">
-                                        <label for="atharo" class="col-md-3 control-label">২০১৮-১৯ অর্থবছরে অনুমোদিত বিক্রয়মূল্য</label>
+                                        <label for="parbotto" class="col-md-3 control-label">চলতি অর্থবছরে পার্বত্য জেলাসমূহের অনুমোদিত অনুমোদিত বিক্রয়মূল্য</label>
                                         <div class="col-md-9">
-                                            <input type="text" class="form-control" name="atharo" placeholder="২০১৮-১৯ অর্থবছরে অনুমোদিত বিক্রয়মূল্য">
-                                        </div>
-                                    </div>
-
-                                    <div class="form-group">
-                                        <label for="unish" class="col-md-3 control-label">২০১৯-২০ অর্থবছরে অনুমোদিত বিক্রয়মূল্য</label>
-                                        <div class="col-md-9">
-                                        <input type="text" class="form-control" name="unish" placeholder="২০১৯-২০ অর্থবছরে অনুমোদিত বিক্রয়মূল্য">
-                                        </div>
-                                    </div>
-
-                                    <div class="form-group">
-                                        <label for="parbotto" class="col-md-3 control-label">২০১৯-২০ অর্থবছরে পার্বত্য জেলাসমূহের অনুমোদিত অনুমোদিত বিক্রয়মূল্য</label>
-                                        <div class="col-md-9">
-                                            <input type="text" class="form-control" name="parbotto" placeholder="২০১৯-২০ অর্থবছরে পার্বত্য জেলাসমূহের অনুমোদিত অনুমোদিত বিক্রয়মূল্য">
+                                            <input type="text" class="form-control" name="parbotto" placeholder="চলতি অর্থবছরে পার্বত্য জেলাসমূহের অনুমোদিত অনুমোদিত বিক্রয়মূল্য">
                                         </div>
                                     </div>
 
                                    
                                     <div class="form-group">
-                                        <label for="year" class="col-md-3 control-label">বছর</label>
                                         <div class="col-md-9">
-                                            <input type="text" class="form-control" name="year" placeholder="বছর">
+                                            <label for="year">বছর :</label>
+                                        <select id="year" name="year" required>
+                                            <option value="2017">২০১৭-১৮</option>
+                                            <option value="2018">২০১৮-১৯</option>
+                                            <option value="2019">২০১৯-২০</option>
+                                            <option value="2020">২০২০-২১</option>
+                                            <option value="2021">২০২১-২২</option>
+                                            <option value="2022">২০২২-২৩</option>
+                                        </select>
                                         </div>
                                     </div>
 
-                                    <div class="form-group">
-                                        <label for="year" class="col-md-3 control-label">userid</label>
-                                        <div class="col-md-9">
-                                            <input type="tsxt" class="form-control" name="user_id" placeholder="id" value="<%= user_id %>">
-                                        </div>
-                                    </div>
                                     
                                     <div class="form-group">
                                         <!-- Button -->                                        
