--- a/views/pd/charaKolomPrice/charaKolom/charaKolomTable.ejs
+++ b/views/pd/charaKolomPrice/charaKolom/charaKolomTable.ejs
@@ -2,27 +2,25 @@
     <table class="table table-bordered table-striped" id="tblCustomers" cellspacing="0" cellpadding="0">
     <thead>
     <tr>
+        <th>ক্রমিক নং</th>
         <th>চারা/কলমের নাম</th>
-        <th>২০১৭-১৮ অর্থবছরে অনুমোদিত বিক্রয়মূল্য</th>
-        <th>২০১৮-১৯ অর্থবছরে অনুমোদিত বিক্রয়মূল্য</th>
-        <th>২০১৯-২০ অর্থবছরে অনুমোদিত বিক্রয়মূল্য</th>
-        <th>২০১৯-২০ অর্থবছরে পার্বত্য জেলাসমূহের অনুমোদিত অনুমোদিত বিক্রয়মূল্য</th>
+        <th>চলতি অর্থবছরে অনুমোদিত বিক্রয়মূল্য</th>
+        <th>চলতি অর্থবছরে পার্বত্য জেলাসমূহের অনুমোদিত অনুমোদিত বিক্রয়মূল্য</th>
         <th>পরিবর্তন/মুছুন</th>
     </tr>
     </thead>
     <tbody>
-        <% records.forEach(function(row){ %>
+        <% records.forEach(function(row,index){ %>
             <tr>
+                <td><%= index+1 %></td>
                 <td><%= row.cname %></td>
-                <td><%= row.shotero %></td>
-                <td><%= row.atharo %></td>
-                <td><%= row.unish %></td>
+                <td><%= row.cholti %></td>
                 <td><%= row.parbotto %></td>
                 
                 
                
-                <td><a class="btn btn-primary btn-xs" href="/edit/<%= row.id %>"><i class="fa fa-edit"></i></a>
-                    <a class="btn btn-danger btn-xs" href="/delete/<%= row.id %>"><i class="fa fa-trash"></i></a>
+                <td><a class="btn btn-primary btn-xs" href="/pd/charaKolomEdit/<%= row.id %>"><i class="fa fa-edit"></i></a>
+                    <a class="btn btn-danger btn-xs" href="/pd/charaKolomDelete/<%= row.id %>"><i class="fa fa-trash"></i></a>
                 </td>
             </tr>
         <% }) %>
@@ -33,11 +31,8 @@
         <thead>
         <tr>
             <th>চারা/কলমের নাম</th>
-            <th>২০১৭-১৮ অর্থবছরে অনুমোদিত বিক্রয়মূল্য</th>
-            <th>২০১৮-১৯ অর্থবছরে অনুমোদিত বিক্রয়মূল্য</th>
-            <th>২০১৯-২০ অর্থবছরে অনুমোদিত বিক্রয়মূল্য</th>
-            <th>২০১৯-২০ অর্থবছরে পার্বত্য জেলাসমূহের অনুমোদিত অনুমোদিত বিক্রয়মূল্য</th>
-            <th>পরিবর্তন/মুছুন</th>
+        <th>চলতি অর্থবছরে অনুমোদিত বিক্রয়মূল্য</th>
+        <th>চলতি অর্থবছরে পার্বত্য জেলাসমূহের অনুমোদিত অনুমোদিত বিক্রয়মূল্য</th>
         </tr>
         </thead>
         <tbody>
