--- a/views/pd/charaKolomPrice/folMosholla/folMosholla.ejs
+++ b/views/pd/charaKolomPrice/folMosholla/folMosholla.ejs
@@ -81,7 +81,7 @@
             var year = new Date().getFullYear();
             $.ajax({
                 type: "POST",
-                url: "/center/folMoshollaYear",
+                url: "/pd/folMoshollaYear",
                 data: {year: year},
                 datatype: "json",
                 beforeSend: function() {
@@ -105,7 +105,7 @@
             var year = $('#year').val();
             $.ajax({
                 type: "POST",
-                url: "/center/folMoshollaYear",
+                url: "/pd/folMoshollaYear",
                 data: {year: year},
                 datatype: "json",
                 beforeSend: function() {
