--- a/views/pd/charaKolomPrice/folMosholla/folMoshollaEdit.ejs
+++ b/views/pd/charaKolomPrice/folMosholla/folMoshollaEdit.ejs
@@ -17,7 +17,7 @@
                                 </p>
                                 </div>  
                             <div class="panel-body" >
-                                <form action="/center/folMoshollaForms" id="FieldTrialForm" class="form-horizontal" method="post"  role="form">
+                                <form action="/pd/folMoshollaEditPost/<%=records.id%>" id="FieldTrialForm" class="form-horizontal" method="post"  role="form">
                                     <div id="signupalert" style="display:none" class="alert alert-danger">
                                         <p>Error:</p>
                                         <span></span>
@@ -27,52 +27,27 @@
                                     <div class="form-group">
                                         <label for="item" class="col-md-3 control-label">আইটেমের নাম</label>
                                         <div class="col-md-9">
-                                            <input type="text" class="form-control" name="item" placeholder="আইটেমের নাম">
+                                            <input type="text" class="form-control" name="item" placeholder="আইটেমের নাম" value="<%= records.item %>">
                                         </div>
                                     </div>
                                     
                                     <div class="form-group">
                                         <label for="amount" class="col-md-3 control-label">পরিমাণ (সংখ্যা/কেজি/লিটার)</label>
                                         <div class="col-md-9">
-                                            <input type="text" class="form-control" name="amount" placeholder="পরিমাণ (সংখ্যা/কেজি/লিটার)">
+                                            <input type="text" class="form-control" name="amount" placeholder="পরিমাণ (সংখ্যা/কেজি/লিটার)" value="<%= records.amount %>">
                                         </div>
                                     </div>
 
                                     <div class="form-group">
-                                        <label for="shotero" class="col-md-3 control-label">২০১৭-১৮ অর্থবছরে অনুমোদিত বিক্রয়মূল্য</label>
+                                        <label for="cholti" class="col-md-3 control-label">চলতি অর্থবছরে অনুমোদিত বিক্রয়মূল্য</label>
                                         <div class="col-md-9">
-                                            <input type="text" class="form-control" name="shotero" placeholder="২০১৭-১৮ অর্থবছরে অনুমোদিত বিক্রয়মূল্য">
-                                        </div>
-                                    </div>
-
-                                    <div class="form-group">
-                                        <label for="atharo" class="col-md-3 control-label">২০১৮-১৯ অর্থবছরে অনুমোদিত বিক্রয়মূল্য</label>
-                                        <div class="col-md-9">
-                                        <input type="text" class="form-control" name="atharo" placeholder="২০১৮-১৯ অর্থবছরে অনুমোদিত বিক্রয়মূল্য">
-                                        </div>
-                                    </div>
-
-                                    <div class="form-group">
-                                        <label for="unish" class="col-md-3 control-label">২০১৯-২০ অর্থবছরে অনুমোদিত বিক্রয়মূল্য</label>
-                                        <div class="col-md-9">
-                                            <input type="text" class="form-control" name="unish" placeholder="২০১৯-২০ অর্থবছরে অনুমোদিত বিক্রয়মূল্য">
+                                            <input type="text" class="form-control" name="cholti" placeholder="চলতি অর্থবছরে অনুমোদিত বিক্রয়মূল্য" value="<%= records.cholti %>">
                                         </div>
                                     </div>
 
                                    
-                                    <div class="form-group">
-                                        <label for="year" class="col-md-3 control-label">বছর</label>
-                                        <div class="col-md-9">
-                                            <input type="text" class="form-control" name="year" placeholder="বছর">
-                                        </div>
-                                    </div>
+                                    
 
-                                    <div class="form-group">
-                                        <label for="year" class="col-md-3 control-label">userid</label>
-                                        <div class="col-md-9">
-                                            <input type="text" class="form-control" name="user_id" placeholder="id" value="<%= user_id %>">
-                                        </div>
-                                    </div>
                                     
                                     <div class="form-group">
                                         <!-- Button -->                                        
