--- a/views/pd/charaKolomPrice/otherFlower/otherFlowerTable.ejs
+++ b/views/pd/charaKolomPrice/otherFlower/otherFlowerTable.ejs
@@ -2,31 +2,25 @@
     <table class="table table-bordered table-striped" id="tblCustomers" cellspacing="0" cellpadding="0">
     <thead>
     <tr>
+        <th>ক্রমিক নং</th>
         <th>আইটেমের নাম (জাতওয়ারী)</th>
-        <th>পলিব্যাগ (২০১৭-১৮ এ বিক্রয়মূল্য)</th>
-        <th>টবে (২০১৭-১৮ এ বিক্রয়মূল্য)</th>
-        <th>পলিব্যাগ (২০১৮-১৯ এ বিক্রয়মূল্য)</th>
-        <th>টবে (২০১৮-১৯ এ বিক্রয়মূল্য)</th>
-        <th>পলিব্যাগ (২০১৯-২০ এ বিক্রয়মূল্য)</th>
-        <th>টবে (২০১৯-২০ এ বিক্রয়মূল্য)</th>
+        <th>পলিব্যাগ (চলতি অর্থবছরে বিক্রয়মূল্য)</th>
+        <th>টবে (চলতি অর্থবছরে বিক্রয়মূল্য)</th>
         <th>পরিবর্তন/মুছুন</th>
     </tr>
     </thead>
     <tbody>
-        <% records.forEach(function(row){ %>
+        <% records.forEach(function(row,index){ %>
             <tr>
+                <td><%= index+1 %></td>
                 <td><%= row.item %></td>
-                <td><%= row.polyshotero %></td>
-                <td><%= row.tobshotero %></td>
-                <td><%= row.polyatharo %></td>
-                <td><%= row.tobatharo %></td>
-                <td><%= row.polyunish %></td>
-                <td><%= row.tobunish %></td>
+                <td><%= row.polycholti %></td>
+                <td><%= row.tobcholti %></td>
                 
                 
                
-                <td><a class="btn btn-primary btn-xs" href="/edit/<%= row.id %>"><i class="fa fa-edit"></i></a>
-                    <a class="btn btn-danger btn-xs" href="/delete/<%= row.id %>"><i class="fa fa-trash"></i></a>
+                <td><a class="btn btn-primary btn-xs" href="/pd/otherFlowerEdit/<%= row.id %>"><i class="fa fa-edit"></i></a>
+                    <a class="btn btn-danger btn-xs" href="/pd/otherFlowerDelete/<%= row.id %>"><i class="fa fa-trash"></i></a>
                 </td>
             </tr>
         <% }) %>
@@ -37,13 +31,8 @@
         <thead>
         <tr>
             <th>আইটেমের নাম (জাতওয়ারী)</th>
-            <th>পলিব্যাগ (২০১৭-১৮ এ বিক্রয়মূল্য)</th>
-            <th>টবে (২০১৭-১৮ এ বিক্রয়মূল্য)</th>
-            <th>পলিব্যাগ (২০১৮-১৯ এ বিক্রয়মূল্য)</th>
-            <th>টবে (২০১৮-১৯ এ বিক্রয়মূল্য)</th>
-            <th>পলিব্যাগ (২০১৯-২০ এ বিক্রয়মূল্য)</th>
-            <th>টবে (২০১৯-২০ এ বিক্রয়মূল্য)</th>
-            <th>পরিবর্তন/মুছুন</th>
+            <th>পলিব্যাগ (চলতি অর্থবছরে বিক্রয়মূল্য)</th>
+            <th>টবে (চলতি অর্থবছরে বিক্রয়মূল্য)</th>
         </tr>
         </thead>
         <tbody>
