--- a/views/pd/charaKolomPrice/seasonalFlower/seasonalFlower.ejs
+++ b/views/pd/charaKolomPrice/seasonalFlower/seasonalFlower.ejs
@@ -80,7 +80,7 @@
             var year = new Date().getFullYear();
             $.ajax({
                 type: "POST",
-                url: "/center/seasonalFlowerYear",
+                url: "/pd/seasonalFlowerYear",
                 data: {year: year},
                 datatype: "json",
                 beforeSend: function() {
@@ -104,7 +104,7 @@
             var year = $('#year').val();
             $.ajax({
                 type: "POST",
-                url: "/center/seasonalFlowerYear",
+                url: "/pd/seasonalFlowerYear",
                 data: {year: year},
                 datatype: "json",
                 beforeSend: function() {
