--- a/views/pd/charaKolomPrice/winterVeg/winterVegEdit.ejs
+++ b/views/pd/charaKolomPrice/winterVeg/winterVegEdit.ejs
@@ -9,15 +9,15 @@
                     <div id="signupbox" style="margin-top:50px" class="mainbox col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
                         <div class="panel panel-info">
                             <div class="panel-heading">
-                                <div class="panel-title"><h2>বিভিন্ন ফুল ও সুদৃশ্য গাছের চারা/কলমের বিক্রয় মূল্য ফর্ম</h2></div>
+                                <div class="panel-title"><h2>শীতকালীন সবজি ও অন্যান্য বীজের/চারার বিক্রয় মূল্য ফর্ম</h2></div>
                                 <p><%
                                 if(success !=''){ %>
                                 <%= success %>
                                     <% } %>
                                 </p>
                                 </div>  
-                            <div class="panel-body" >
-                                <form action="/pd/otherFlowerForms" id="FieldTrialForm" class="form-horizontal" method="post"  role="form">
+                                <div class="panel-body" >
+                                <form action="/pd/winterVegEditPost/<%=records.id%>" id="FieldTrialForm" class="form-horizontal" method="post"  role="form">
                                     <div id="signupalert" style="display:none" class="alert alert-danger">
                                         <p>Error:</p>
                                         <span></span>
@@ -27,40 +27,30 @@
                                     <div class="form-group">
                                         <label for="item" class="col-md-3 control-label">আইটেমের নাম (জাতওয়ারী)</label>
                                         <div class="col-md-9">
-                                            <input type="text" class="form-control" name="item" placeholder="আইটেমের নাম (জাতওয়ারী)">
+                                            <input type="text" class="form-control" name="item" placeholder="আইটেমের নাম (জাতওয়ারী)" value="<%= records.item %>">
                                         </div>
                                     </div>
                                     
                                     <div class="form-group">
-                                        <label for="polycholti" class="col-md-3 control-label">পলিব্যাগ (চলতি অর্থবছরে বিক্রয়মূল্য)</label>
+                                        <label for="doshcholti" class="col-md-3 control-label">প্রতি ১০ গ্রাম বীজের মূল্য(টাকায়) (চলতি অর্থবছরে)</label>
                                         <div class="col-md-9">
-                                            <input type="text" class="form-control" name="polycholti" placeholder="পলিব্যাগ (চলতি অর্থবছরে বিক্রয়মূল্য)">
+                                            <input type="text" class="form-control" name="doshcholti" placeholder="প্রতি ১০ গ্রাম বীজের মূল্য(টাকায়) (চলতি অর্থবছরে)" value="<%= records.doshcholti %>">
                                         </div>
                                     </div>
 
                                     <div class="form-group">
-                                        <label for="tobcholti" class="col-md-3 control-label">টবে (চলতি অর্থবছরে বিক্রয়মূল্য)</label>
+                                        <label for="ekshoucchocholti" class="col-md-3 control-label">প্রতি ১০০ টি চারার (উচ্চ ফলনশীল) মূল্য(টাকায়) (চলতি অর্থবছরে)</label>
                                         <div class="col-md-9">
-                                            <input type="text" class="form-control" name="tobcholti" placeholder="টবে (চলতি অর্থবছরে বিক্রয়মূল্য)">
+                                            <input type="text" class="form-control" name="ekshoucchocholti" placeholder="প্রতি ১০০ টি চারার (উচ্চ ফলনশীল) মূল্য(টাকায়) (চলতি অর্থবছরে)" value="<%= records.ekshoucchocholti %>">
                                         </div>
                                     </div>
 
-                                    
-                                   
                                     <div class="form-group">
+                                        <label for="ekshohybridcholti" class="col-md-3 control-label">প্রতি ১০০ টি চারার (হাইব্রিড) মূল্য(টাকায়) (চলতি অর্থবছরে)</label>
                                         <div class="col-md-9">
-                                            <label for="year">বছর :</label>
-                                        <select id="year" name="year" required>
-                                            <option value="2017">২০১৭-১৮</option>
-                                            <option value="2018">২০১৮-১৯</option>
-                                            <option value="2019">২০১৯-২০</option>
-                                            <option value="2020">২০২০-২১</option>
-                                            <option value="2021">২০২১-২২</option>
-                                            <option value="2022">২০২২-২৩</option>
-                                        </select>
+                                        <input type="text" class="form-control" name="ekshohybridcholti" placeholder="প্রতি ১০০ টি চারার (হাইব্রিড) মূল্য(টাকায়) (চলতি অর্থবছরে)" value="<%= records.ekshohybridcholti %>">
                                         </div>
                                     </div>
-
                                     
                                     <div class="form-group">
                                         <!-- Button -->                                        
