--- a/views/pd/charaKolomPrice/winterVeg/winterVegForm.ejs
+++ b/views/pd/charaKolomPrice/winterVeg/winterVegForm.ejs
@@ -32,61 +32,41 @@
                                     </div>
                                     
                                     <div class="form-group">
-                                        <label for="doshatharo" class="col-md-3 control-label">প্রতি ১০ গ্রাম বীজের মূল্য(টাকায়) (২০১৮-১৯ সালে)</label>
+                                        <label for="doshcholti" class="col-md-3 control-label">প্রতি ১০ গ্রাম বীজের মূল্য(টাকায়) (চলতি অর্থবছরে)</label>
                                         <div class="col-md-9">
-                                            <input type="text" class="form-control" name="doshatharo" placeholder="প্রতি ১০ গ্রাম বীজের মূল্য(টাকায়) (২০১৮-১৯ সালে)">
+                                            <input type="text" class="form-control" name="doshcholti" placeholder="প্রতি ১০ গ্রাম বীজের মূল্য(টাকায়) (চলতি অর্থবছরে)">
                                         </div>
                                     </div>
 
                                     <div class="form-group">
-                                        <label for="ekshoucchoatharo" class="col-md-3 control-label">প্রতি ১০০ টি চারার (উচ্চ ফলনশীল) মূল্য(টাকায়) (২০১৮-১৯ সালে)</label>
+                                        <label for="ekshoucchocholti" class="col-md-3 control-label">প্রতি ১০০ টি চারার (উচ্চ ফলনশীল) মূল্য(টাকায়) (চলতি অর্থবছরে)</label>
                                         <div class="col-md-9">
-                                            <input type="text" class="form-control" name="ekshoucchoatharo" placeholder="প্রতি ১০০ টি চারার (উচ্চ ফলনশীল) মূল্য(টাকায়) (২০১৮-১৯ সালে)">
+                                            <input type="text" class="form-control" name="ekshoucchocholti" placeholder="প্রতি ১০০ টি চারার (উচ্চ ফলনশীল) মূল্য(টাকায়) (চলতি অর্থবছরে)">
                                         </div>
                                     </div>
 
                                     <div class="form-group">
-                                        <label for="ekshohybridatharo" class="col-md-3 control-label">প্রতি ১০০ টি চারার (হাইব্রিড) মূল্য(টাকায়) (২০১৮-১৯ সালে)</label>
+                                        <label for="ekshohybridcholti" class="col-md-3 control-label">প্রতি ১০০ টি চারার (হাইব্রিড) মূল্য(টাকায়) (চলতি অর্থবছরে)</label>
                                         <div class="col-md-9">
-                                        <input type="text" class="form-control" name="ekshohybridatharo" placeholder="প্রতি ১০০ টি চারার (হাইব্রিড) মূল্য(টাকায়) (২০১৮-১৯ সালে)">
-                                        </div>
-                                    </div>
-
-                                    <div class="form-group">
-                                        <label for="doshbijunish" class="col-md-3 control-label">প্রতি ১০ গ্রাম বীজের মূল্য(টাকায়) (২০১৯-২০ সালে)</label>
-                                        <div class="col-md-9">
-                                            <input type="text" class="form-control" name="doshbijunish" placeholder="প্রতি ১০ গ্রাম বীজের মূল্য(টাকায়) (২০১৯-২০ সালে)">
-                                        </div>
-                                    </div>
-
-                                    <div class="form-group">
-                                        <label for="ekshoucchounish" class="col-md-3 control-label">প্রতি ১০০ টি চারার (উচ্চ ফলনশীল) মূল্য(টাকায়) (২০১৯-২০ সালে)</label>
-                                        <div class="col-md-9">
-                                            <input type="text" class="form-control" name="ekshoucchounish" placeholder="প্রতি ১০০ টি চারার (উচ্চ ফলনশীল) মূল্য(টাকায়) (২০১৯-২০ সালে)">
-                                        </div>
-                                    </div>
-
-                                    <div class="form-group">
-                                        <label for="ekshohybridunish" class="col-md-3 control-label">প্রতি ১০০ টি চারার (হাইব্রিড) মূল্য(টাকায়) (২০১৯-২০ সালে)</label>
-                                        <div class="col-md-9">
-                                        <input type="text" class="form-control" name="ekshohybridunish" placeholder="প্রতি ১০০ টি চারার (হাইব্রিড) মূল্য(টাকায়) (২০১৯-২০ সালে)">
+                                        <input type="text" class="form-control" name="ekshohybridcholti" placeholder="প্রতি ১০০ টি চারার (হাইব্রিড) মূল্য(টাকায়) (চলতি অর্থবছরে)">
                                         </div>
                                     </div>
 
                                    
                                     <div class="form-group">
-                                        <label for="year" class="col-md-3 control-label">বছর</label>
                                         <div class="col-md-9">
-                                            <input type="text" class="form-control" name="year" placeholder="বছর">
+                                            <label for="year">বছর :</label>
+                                        <select id="year" name="year" required>
+                                            <option value="2017">২০১৭-১৮</option>
+                                            <option value="2018">২০১৮-১৯</option>
+                                            <option value="2019">২০১৯-২০</option>
+                                            <option value="2020">২০২০-২১</option>
+                                            <option value="2021">২০২১-২২</option>
+                                            <option value="2022">২০২২-২৩</option>
+                                        </select>
                                         </div>
                                     </div>
 
-                                    <div class="form-group">
-                                        <label for="year" class="col-md-3 control-label">userid</label>
-                                        <div class="col-md-9">
-                                            <input type="text" class="form-control" name="user_id" placeholder="id" value="<%= user_id %>" >
-                                        </div>
-                                    </div>
                                     
                                     <div class="form-group">
                                         <!-- Button -->                                        
