--- a/views/pd/charaKolomPrice/winterVeg/winterVegTable.ejs
+++ b/views/pd/charaKolomPrice/winterVeg/winterVegTable.ejs
@@ -2,31 +2,26 @@
     <table class="table table-bordered table-striped" id="tblCustomers" cellspacing="0" cellpadding="0">
     <thead>
     <tr>
+        <th>ক্রমিক নং</th>
         <th>আইটেমের নাম (জাতওয়ারী)</th>
-        <th>প্রতি ১০ গ্রাম বীজের মূল্য(টাকায়) (২০১৮-১৯ সালে)</th>
-        <th>প্রতি ১০০ টি চারার (উচ্চ ফলনশীল) মূল্য(টাকায়) (২০১৮-১৯ সালে)</th>
-        <th>প্রতি ১০০ টি চারার (হাইব্রিড) মূল্য(টাকায়) (২০১৮-১৯ সালে)</th>
-        <th>প্রতি ১০ গ্রাম বীজের মূল্য(টাকায়) (২০১৯-২০ সালে)</th>
-        <th>প্রতি ১০০ টি চারার (উচ্চ ফলনশীল) মূল্য(টাকায়) (২০১৯-২০ সালে)</th>
-        <th>প্রতি ১০০ টি চারার (হাইব্রিড) মূল্য(টাকায়) (২০১৯-২০ সালে)</th>
+        <th>প্রতি ১০ গ্রাম বীজের মূল্য(টাকায়) (চলতি অর্থবছরে)</th>
+        <th>প্রতি ১০০ টি চারার (উচ্চ ফলনশীল) মূল্য(টাকায়) (চলতি অর্থবছরে)</th>
+        <th>প্রতি ১০০ টি চারার (হাইব্রিড) মূল্য(টাকায়) (চলতি অর্থবছরে)</th>
         <th>পরিবর্তন/মুছুন</th>
     </tr>
     </thead>
     <tbody>
-        <% records.forEach(function(row){ %>
+        <% records.forEach(function(row,index){ %>
             <tr>
+                <td><%= index+1 %></td>
                 <td><%= row.item %></td>
-                <td><%= row.doshatharo %></td>
-                <td><%= row.ekshoucchoatharo %></td>
-                <td><%= row.ekshohybridatharo %></td>
-                <td><%= row.doshbijunish %></td>
-                <td><%= row.ekshoucchounish %></td>
-                <td><%= row.ekshohybridunish %></td>
-                
+                <td><%= row.doshcholti %></td>
+                <td><%= row.ekshoucchocholti %></td>
+                <td><%= row.ekshohybridcholti %></td>              
                 
                
-                <td><a class="btn btn-primary btn-xs" href="/edit/<%= row.id %>"><i class="fa fa-edit"></i></a>
-                    <a class="btn btn-danger btn-xs" href="/delete/<%= row.id %>"><i class="fa fa-trash"></i></a>
+                <td><a class="btn btn-primary btn-xs" href="/pd/winterVegEdit/<%= row.id %>"><i class="fa fa-edit"></i></a>
+                    <a class="btn btn-danger btn-xs" href="/pd/winterVegDelete/<%= row.id %>"><i class="fa fa-trash"></i></a>
                 </td>
             </tr>
         <% }) %>
@@ -37,13 +32,9 @@
         <thead>
         <tr>
             <th>আইটেমের নাম (জাতওয়ারী)</th>
-            <th>প্রতি ১০ গ্রাম বীজের মূল্য(টাকায়) (২০১৮-১৯ সালে)</th>
-            <th>প্রতি ১০০ টি চারার (উচ্চ ফলনশীল) মূল্য(টাকায়) (২০১৮-১৯ সালে)</th>
-            <th>প্রতি ১০০ টি চারার (হাইব্রিড) মূল্য(টাকায়) (২০১৮-১৯ সালে)</th>
-            <th>প্রতি ১০ গ্রাম বীজের মূল্য(টাকায়) (২০১৯-২০ সালে)</th>
-            <th>প্রতি ১০০ টি চারার (উচ্চ ফলনশীল) মূল্য(টাকায়) (২০১৯-২০ সালে)</th>
-            <th>প্রতি ১০০ টি চারার (হাইব্রিড) মূল্য(টাকায়) (২০১৯-২০ সালে)</th>
-            <th>পরিবর্তন/মুছুন</th>
+        <th>প্রতি ১০ গ্রাম বীজের মূল্য(টাকায়) (চলতি অর্থবছরে)</th>
+        <th>প্রতি ১০০ টি চারার (উচ্চ ফলনশীল) মূল্য(টাকায়) (চলতি অর্থবছরে)</th>
+        <th>প্রতি ১০০ টি চারার (হাইব্রিড) মূল্য(টাকায়) (চলতি অর্থবছরে)</th>
         </tr>
         </thead>
         <tbody>
