--- a/views/center/monthlyProgress/monthlyProgress.ejs
+++ b/views/center/monthlyProgress/monthlyProgress.ejs
@@ -11,26 +11,17 @@
                 <div class="main-content">
                     <div class="container-fluid">
                         <div class="row clearfix">
-                            <div class="col-md-10">
-                                <h1 class="text-center"><%= title %></h1>
-                            </div>
-                            <div class="col-md-2">
-<!--                                <label for="startDate">Date :</label>-->
-<!--                                <input name="startDate" id="startDate" class="date-picker" />-->
-
-<!--                                <label for="year">Choose a year:</label>-->
-<!--                                <select id="year" name="year">-->
-<!--                                    <option value="">Choose year</option>-->
-<!--                                    <option value="2017">2017</option>-->
-<!--                                    <option value="2018">2018</option>-->
-<!--                                    <option value="2019">2019</option>-->
-<!--                                    <option value="2020" selected>2020</option>-->
-<!--                                    <option value="2021">2021</option>-->
-<!--                                    <option value="2022">2022</option>-->
-<!--                                    <option value="2023">2023</option>-->
-<!--                                </select>-->
+                            <div class="col-md-8"></div>
+                            <div class="col-md-4">
+                                <div class="row">
+                                    <div class="col">
+                                        <input name="startDate" id="startDate" class="date-picker year form-control" placeholder="Date" autocomplete="off"/>
+                                    </div>
+                                    <button class="btn btn-success col" id="search">Search</button>
+                                </div>
                             </div>
                         </div>
+                        <h1 class="text-center"><%= title %></h1>
                         <div class="row mb-2">
                             <div class="col-md-12">
                                 <a href="/center/monthlyProgressForm" class="btn btn-success btn-group-sm ">মাসিক প্রতিবেদন ফর্ম</a>
@@ -83,8 +74,9 @@
     });
 
     $("#wrapper").load( "no url rn",function() {
-        
-        var year = new Date().getFullYear();
+        var year = moment().format("MMM-YYYY");
+        $('#startDate').val(year)
+
         $.ajax({
             type: "POST",
             url: "/center/monthlyProgressYear",
@@ -107,8 +99,8 @@
         });
     });
 
-    $('#year').on("change",function () {
-        var year = $('#year').val();
+    $('#search').on("change click",function () {
+        var year = $('.year').val();
         $.ajax({
             type: "POST",
             url: "/center/monthlyProgressYear",
@@ -141,7 +133,6 @@
     });
 
     $(document).ready(function() {
-
         $('#tblCustomers').DataTable();
     } );
 
