--- a/views/center/topSheet/topSheet.ejs
+++ b/views/center/topSheet/topSheet.ejs
@@ -1,4 +1,9 @@
 <%- include('../../includes/header')-%>
+<style>
+    .ui-datepicker-calendar {
+        display: none;
+    }
+</style>
         <div id="wrapper" class="wrapper" >
             <%- include('../../includes/topbar')-%>
             <div class="page-wrap">
@@ -6,24 +11,17 @@
                 <div class="main-content">
                     <div class="container-fluid">
                         <div class="row clearfix">
-                            <div class="col-md-10">
-                                <h1 class="text-center"><%= title %></h1>
-                            </div>
-                            <div class="col-md-2">
-                                <label for="year">Choose a year:</label>
-
-                                <select id="year" name="year">
-                                    <option value="">Choose year</option>
-                                    <option value="2017">২০১৭-১৮</option>
-                                    <option value="2018">২০১৮-১৯</option>
-                                    <option value="2019">২০১৯-২০</option>
-                                    <option value="2020" selected>২০২০-২১</option>
-                                    <option value="2021">২০২১-২২</option>
-                                    <option value="2022">২০২২-২৩</option>
-                                    <option value="2023">২০২৩-২৪</option>
-                                </select>
+                            <div class="col-md-8"></div>
+                            <div class="col-md-4">
+                                <div class="row">
+                                    <div class="col">
+                                        <input name="startDate" id="startDate" class="date-picker year form-control" placeholder="Date" autocomplete="off"/>
+                                    </div>
+                                    <button class="btn btn-success col" id="search">Search</button>
+                                </div>
                             </div>
                         </div>
+                        <h1 class="text-center"><%= title %></h1>
                         <div class="row mb-2">
                             <!-- <div class="col-md-12">
                                 <a href="/center/topSheetForm" class="btn btn-success btn-group-sm ">টপশীট</a>
@@ -75,8 +73,9 @@
     });
 
     $("#wrapper").load( "no url rn",function() {
-        
-        var year = new Date().getFullYear();
+        var year = moment().format("MMM-YYYY");
+        $('#startDate').val(year)
+
         $.ajax({
             type: "POST",
             url: "/center/topSheetYear",
@@ -99,8 +98,8 @@
         });
     });
 
-    $('#year').on("change",function () {
-        var year = $('#year').val();
+    $('#search').on("change click",function () {
+        var year = $('.year').val();
         $.ajax({
             type: "POST",
             url: "/center/topSheetYear",
@@ -120,6 +119,16 @@
                 $('#output').show();
             }
         });
+    });
+
+    $('.date-picker').datepicker( {
+        changeMonth: true,
+        changeYear: true,
+        showButtonPanel: true,
+        dateFormat: 'M-yy',
+        onClose: function(dateText, inst) {
+            $(this).datepicker('setDate', new Date(inst.selectedYear, inst.selectedMonth, 1));
+        }
     });
 
     $(document).ready(function() {
