--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -21,6 +21,7 @@
         <script src="/admin/js/widgets.js"></script>
         <script src="/admin/js/charts.js"></script>
         <script src="/admin/dist/js/theme.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.19.1/moment.min.js" integrity="sha512-Dz4zO7p6MrF+VcOD6PUbA08hK1rv0hDv/wGuxSUjImaUYxRyK2gLC6eQWVqyDN9IM1X/kUA8zkykJS/gEVOd3w==" crossorigin="anonymous"></script>
 
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
